@@ -3,23 +3,14 @@ entering extended mode
  %&-line parsing enabled.
 **pdfprimitive-eptex
 (./pdfprimitive-eptex.tex
-RELAX macro:->\message {RELAX} FUGA
-! Missing primitive name.
-<to be read again> 
-                   \fuga 
-l.13 \pdfprimitive\fuga
-                        % ==> ``! Missing primitive name.'' error
-The control sequence marked <to be read again> does not
-represent any known primitive.
-
-FUGA F T F F F
+RELAX macro:->\message {RELAX} FUGA F T F F F
 > \pdfstrcmp=\pdfstrcmp.
-l.22 \show\pdfstrcmp
+l.28 \show\pdfstrcmp
                      % ==> \pdfstrcmp
 
 T T
 ! Undefined control sequence.
-l.29 \setbox0=\vbox{\pdfprimitive\ \undefined
+l.35 \setbox0=\vbox{\pdfprimitive\ \undefined
                                              }
 The control sequence at the end of the top line
 of your error message was never \def'ed. If you have
@@ -28,7 +19,7 @@ spelling (e.g., `I\hbox'). Otherwise just continue,
 and I'll forget about whatever was undefined.
 
 ! Undefined control sequence.
-l.31 \setbox0=\vbox{\pdfprimitive\vrule\undefined
+l.37 \setbox0=\vbox{\pdfprimitive\vrule\undefined
                                                  }
 The control sequence at the end of the top line
 of your error message was never \def'ed. If you have
@@ -37,10 +28,30 @@ spelling (e.g., `I\hbox'). Otherwise just continue,
 and I'll forget about whatever was undefined.
 
 
-Overfull \hbox (0.4pt too wide) in paragraph at lines 31--31
+Overfull \hbox (0.4pt too wide) in paragraph at lines 37--37
 []|
 
 \hbox(0.0+0.0)x0.0 []
 
- )
+<1>
+! Missing number, treated as zero.
+<to be read again> 
+                   \- 
+l.43   \count42=\pdfprimitive\-
+                                2\A
+A number should have been here; I inserted `0'.
+(If you can't figure out why I needed to see a number,
+look up `weird error' in the index to The TeXbook.)
+
+<0>
+! Missing number, treated as zero.
+<to be read again> 
+                   \vrule 
+l.44   \count42=\pdfprimitive\vrule
+                                    3\A
+A number should have been here; I inserted `0'.
+(If you can't figure out why I needed to see a number,
+look up `weird error' in the index to The TeXbook.)
+
+<0> )
 No pages of output.
